post links in the wide summary view no longer stretch to fulfill the parent width, they stretch to fit their own content.

--- a/css/scss/master.scss
+++ b/css/scss/master.scss
@@ -508,7 +508,7 @@ header {
         max-width: 240px;
 
         .post-link {
-            display: block;
+            display: inline-block;
         }
 
         .publish-date {
